--- a/presentation-memoire-emamirad.tex
+++ b/presentation-memoire-emamirad.tex
@@ -103,10 +103,13 @@ est un formalisme de représentation des connaissances et de fouille de données
 \end{enumerate}
 \end{itemize}
 \end{frame}
-%------------------------------------------------
 
+%------------------------------------------------
 \section{Rappels}
 %------------------------------------------------
+\begin{frame}
+\huge{\centerline{Rappels}}
+\end{frame}
 
 \begin{frame}
 \frametitle{Rappels I}
@@ -385,85 +388,46 @@ Par exemple, $3 \downarrow e$ car
 \item $3^- \leq \mu(e)$ avec $3^-=(\emptyset, abcdef)$
 \end{itemize}
 \end{frame}
-%------------------------------------------------
-
-\begin{frame}
-\frametitle{Multiple Columns}
-\begin{columns}[c] % The "c" option specifies centered vertical alignment while the "t" option is used for top vertical alignment
-
-\column{.45\textwidth} % Left column and width
-\textbf{Heading}
-\begin{enumerate}
-\item Statement
-\item Explanation
-\item Example
-\end{enumerate}
-
-\column{.5\textwidth} % Right column and width
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lectus nisl, ultricies in feugiat rutrum, porttitor sit amet augue. Aliquam ut tortor mauris. Sed volutpat ante purus, quis accumsan dolor.
-
-\end{columns}
-\end{frame}
-
-\begin{frame}
-\frametitle{Table}
-\begin{table}
-\begin{tabular}{l l l}
-\toprule
-\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
-\midrule
-Treatment 1 & 0.0003262 & 0.562 \\
-Treatment 2 & 0.0015681 & 0.910 \\
-Treatment 3 & 0.0009271 & 0.296 \\
-\bottomrule
-\end{tabular}
-\caption{Table caption}
-\end{table}
-\end{frame}
 
 %------------------------------------------------
-
-\begin{frame}
-\frametitle{Theorem}
-\begin{theorem}[Mass--energy equivalence]
-$E = mc^2$
-\end{theorem}
-\end{frame}
-
+\section{Les outils de l'analyse formelle de concepts}
 %------------------------------------------------
-
-\begin{frame}[fragile] % Need to use the fragile option when verbatim is used in the slide
-\frametitle{Verbatim}
-\begin{example}[Theorem Slide Code]
-\begin{verbatim}
 \begin{frame}
-\frametitle{Theorem}
-\begin{theorem}[Mass--energy equivalence]
-$E = mc^2$
-\end{theorem}
-\end{frame}\end{verbatim}
-\end{example}
+\huge{\centerline{Les outils de l'analyse formelle de concepts}}
 \end{frame}
-
 %------------------------------------------------
-
 \begin{frame}
-\frametitle{Figure}
-Uncomment the code on this slide to include your own image from the same directory as the template .TeX file.
-%\begin{figure}
-%\includegraphics[width=0.8\linewidth]{test}
-%\end{figure}
+\frametitle{Les outils de l'analyse formelle de concepts}
+\framesubtitle{\textsc{Galicia}}
+\begin{itemize}
+\item \textsc{Galicia}\footnote{\url{http://www.iro.umontreal.ca/~galicia/}} a été developpé en Java par Pekto Valchev et ses collaborateurs (Université de Montréal).
+\end{itemize}
+\begin{figure}[H]
+\label{fig:galicia-ctx}
+\begin{center}\includegraphics[scale=0.36]{figures/galicia1.jpg}\end{center}
+\caption{Éditeur de contexte}
+\end{figure}
 \end{frame}
-
 %------------------------------------------------
-
-\begin{frame}[fragile] % Need to use the fragile option when verbatim is used in the slide
-\frametitle{Citation}
-An example of the \verb|\parencite| command to cite within the presentation:\\~
-
-This statement requires citation \parencite{Ganter1999}.
+\begin{frame}
+\frametitle{Les outils de l'analyse formelle de concepts}
+\framesubtitle{\textsc{Galicia}}
+\begin{figure}[H]
+\begin{center}\includegraphics[scale=0.50]{figures/galicia-life-cycle.png}\end{center}
+\caption{Cycle de vie du treillis Galicia}
+\label{cap:fig:galicia-life-cycle}
+\end{figure}
 \end{frame}
-
+%------------------------------------------------
+\begin{frame}
+\frametitle{Les outils de l'analyse formelle de concepts}
+\framesubtitle{\textsc{Galicia}}
+\begin{figure}[H]
+\begin{center}\includegraphics[scale=0.36]{figures/galicia-full-labeling.png}\end{center}
+\caption{Treillis Galicia avec étiquetage complet}
+\label{cap:fig:galicia-full-label}
+\end{figure}
+\end{frame}
 %------------------------------------------------
 \begin{frame}[allowframebreaks]
 \frametitle{References}
