--- a/presentation-memoire-emamirad.tex
+++ b/presentation-memoire-emamirad.tex
@@ -402,31 +402,43 @@ Par exemple, $3 \downarrow e$ car
 \begin{itemize}
 \item \textsc{Galicia}\footnote{\url{http://www.iro.umontreal.ca/~galicia/}} a été developpé en Java par Pekto Valchev et ses collaborateurs (Université de Montréal).
 \end{itemize}
+\begin{columns}[c] % The "c" option specifies centered vertical alignment while the "t" option is used for top vertical alignment
+
+\column{.45\textwidth} % Left column and width
 \begin{figure}[H]
-\label{fig:galicia-ctx}
-\begin{center}\includegraphics[scale=0.36]{figures/galicia1.jpg}\end{center}
-\caption{Éditeur de contexte}
-\end{figure}
-\end{frame}
-%------------------------------------------------
-\begin{frame}
-\frametitle{Les outils de l'analyse formelle de concepts}
-\framesubtitle{\textsc{Galicia}}
-\begin{figure}[H]
-\begin{center}\includegraphics[scale=0.50]{figures/galicia-life-cycle.png}\end{center}
+\begin{center}\includegraphics[scale=0.40]{figures/galicia-life-cycle.png}\end{center}
 \caption{Cycle de vie du treillis Galicia}
 \label{cap:fig:galicia-life-cycle}
 \end{figure}
+
+\column{.5\textwidth} % Right column and width
+Quelques fonctionnalités de Galicia:
+\begin{itemize}
+\item Affichage du treillis en trois dimensions
+\item Manipulation du contexte et du treillis
+\item Plusieurs procédures de construction du treillis : Bordat, Nourine, Godin et \emph{Next-Closure}.
+\end{itemize}
+\end{columns}
+
 \end{frame}
 %------------------------------------------------
 \begin{frame}
 \frametitle{Les outils de l'analyse formelle de concepts}
 \framesubtitle{\textsc{Galicia}}
+\begin{columns}[c] % The "c" option specifies centered vertical alignment while the "t" option is used for top vertical alignment
+\column{.4\textwidth} % Left column and width
 \begin{figure}[H]
-\begin{center}\includegraphics[scale=0.36]{figures/galicia-full-labeling.png}\end{center}
+\label{fig:galicia-ctx}
+\begin{center}\includegraphics[scale=0.28]{figures/galicia1.jpg}\end{center}
+\caption{Éditeur de contexte}
+\end{figure}
+\column{.6\textwidth} % Right column and width
+\begin{figure}[H]
+\begin{center}\includegraphics[scale=0.30]{figures/galicia-full-labeling.png}\end{center}
 \caption{Treillis Galicia avec étiquetage complet}
 \label{cap:fig:galicia-full-label}
 \end{figure}
+\end{columns}
 \end{frame}
 %------------------------------------------------
 \begin{frame}[allowframebreaks]
