--- a/presentation-memoire-emamirad.bib
+++ b/presentation-memoire-emamirad.bib
@@ -171,7 +171,7 @@
 	Year = {1983}}
 
 @inproceedings{Missaoui2017,
-	Author = {Missaoui, Rokia and Emamirad, Kevin},
+	Author = {Missaoui, Rokia and Emamirad, K{\'{e}}vin},
 	Title = {{L}attice {M}iner 2.0: {A} {F}ormal {C}oncept {A}nalysis {T}ool},
 	Booktitle = {Supplementary Proc. of ICFCA, Rennes, France, 2017},
 	Pages = {91-94},
