--- a/presentation-memoire-emamirad.tex
+++ b/presentation-memoire-emamirad.tex
@@ -177,7 +177,7 @@ Les sous-ensembles fermés de $G$ sont les extensions alors que les sous-ensembl
 \begin{block}{Défintion 4: Treillis de concepts}
 Un \textit{treillis de concepts} $\CLGMI$ est un treillis résultant de l'ordre partiel existant entre les concepts du contexte $\KK = (G,M,I)$.
 $$(A,B) \leq (C,D) \Leftrightarrow A \subseteq C\ \text{et}\ D \subseteq B$$
-$(A, B)$ est alors un sous-concept ou prédecesseur immédiat de $(C, D)$ alors que ce dernier est un successeur de $(A, B)$.
+$(A, B)$ est alors un sous-concept ou prédécesseur immédiat de $(C, D)$ alors que ce dernier est un successeur de $(A, B)$.
 \end{block}
 \begin{block}{Définition 5: Les bornes du treillis}
 La borne inférieure $\wedge$ (\emph{meet}) d'un ensemble de concepts $(X_i, Y_i)$ avec $i = 1, \ldots k$ est le plus grand des prédécesseurs communs. De même, la borne supérieure $\vee$ (\emph{join}) d'un ensemble de concepts est le petit des successeurs communs.
@@ -276,7 +276,7 @@ $$r: g_i \rightarrow Int(c_j)\backslash Int(c) $$
 $r$ est une règle approximative avec
 \begin{itemize}
 \item $c$ un concept formel,
-\item $P = \{c_1, \ldots, c_j, \ldots \}$ l'ensemble des prédecesseurs de $c$,
+\item $P = \{c_1, \ldots, c_j, \ldots \}$ l'ensemble des prédécesseurs de $c$,
 \item $Int(c)$ représente l'intention du concept $c$,
 \item $g_i$ un générateur de $Int(c)$,
 \item \emph{support}$(r) =$ \emph{support}$(c_j)$, et
@@ -432,7 +432,7 @@ Quelques fonctionnalités de Galicia:
 \item Affichage du treillis en trois dimensions
 \item Manipulation du contexte et du treillis
 \item Plusieurs procédures de construction du treillis : Bordat, Nourine, Godin et \emph{Next-Closure}
-\item Connection à des bases de données SQL pour sauvegarder les contextes
+\item Connexion à des bases de données SQL pour sauvegarder les contextes
 \end{itemize}
 \end{columns}
 
@@ -565,7 +565,7 @@ Il s'agit de la 7-ème règle d'association laquelle indique que $b$ implique $f
 \item Logiciel en Java pour la visualisation et la manipulation de treillis
 \item Intialement conçu par Geneviève Roberge dans le cadre de son mémoire de maîtrise.
 \item Continuellement enrichi par les membres de l'équipe et plusieurs stagiaires ingénieurs français.
-\item Aussi bien dans sa version initiale que dans sa version révisé, \lm est un logiciel libre disponible sur \emph{SourceForge}\footnote{\url{https://sourceforge.net/projects/lattice-miner/}} et GitHub\footnote{\url{https://github.com/LarimUQO/lattice-miner}}.
+\item Aussi bien dans sa version initiale que dans sa version révisée \lm est un logiciel libre disponible sur \emph{SourceForge}\footnote{\url{https://sourceforge.net/projects/lattice-miner/}} et GitHub\footnote{\url{https://github.com/LarimUQO/lattice-miner}}.
 \end{itemize}
 \end{frame}
 %------------------------------------------------
